# opencv_learning

./: .gitignore  CMakeLists.txt  test.yaml
python/: 01_io.py
src/: 00.cpp  01_io.cpp  02_args.cpp  03_mouse.cpp  04_trackbar.cpp  05_class.cpp  06_draw.cpp  11_pixel.cpp  12_roi.cpp  13_threshold.cpp  14_channel.cpp  15_dft.cpp  16_yaml.cpp  21_blur.cpp  22_morphology.cpp  31_edge.cpp  32_hough.cpp  33_remap.cpp  34_affine.cpp  35_hist.cpp  41_contours.cpp  42_convexhull.cpp  cal.cpp
